@@ -4,6 +4,14 @@ Zope Changes
   Change information for previous versions of Zope can be found in the
   file HISTORY.txt.
 
+  After Zope 2.11 rc 1
+
+    Restructuring
+
+      - Noted long-standing but silent deprecation of Zope2-style
+        interfaces (on import of the Interface package).  That package
+        is already gone on the trunk.
+
   Zope 2.11 rc 1 (2008/05/08)
 
     Bugs Fixed
